# PythonProgectsSettings

./: .gitignore  Dockerfile  LogSettings.py  README.md  STANDARTS.md  create_path.py  main.py  pyproject.toml  ruff.toml  template.py
app/: main.py
app/api/v1/: __init__.py
app/configs/: __init__.py  log_settings.py  logger.py  pyproject.py  settings.py
app/core/configs/: __init__.py  log_settings.py  pyproject.py  settings.py
app/database/: clusters.py  connection.py
app/drivers/: ldap.py
app/services/: demon.py  ldap.py  scheduler.py
app/services/api/: base.py  exceptions.py
app/templates/: index.html
tests/: test_main.py  test_template.py
