[project]
name = "templateproject"
version = "0.1.0"
description = ""
authors = [{ name = "G2048" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"

dependencies = [
    "fastapi>=0.115.6,<0.116",
    "pydantic-settings>=2.6.1,<3",
    "uvicorn>=0.32.1,<0.33",
    "memory-profiler>=0.61.0,<0.62",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    # "mypy>=1.8.0,<2",
    # "ruff>=0.1.11,<0.2",
]


[tool.ruff]
indent-width = 4
line-length = 88

[tool.ruff.format]
preview = true
quote-style="double"

[tool.ruff.lint]
preview = true # auto enable rule E305 - blank-lines-after-function-or-class
ignore-init-module-imports = true
extend-select = ["Q", "I"]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C",   # flake8-comprehensions
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]

ignore = [
    "C901",  # Too complex
    "B904",  # Except clause
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.lint.isort]
split-on-trailing-comma=true
combine-as-imports=true
known-third-party = ["bound"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "PLC0414"]
"examples/**" = ["N805", "N999", "RUF012"]
"tests/**" = ["RUF012", "SIM115"]
